# FastAPI-2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/api/v1/: device.py  logs.py  upload.py
app/core/: config.py  exceptions.py  logging.py
app/device/: __init__.py  adb.py  automation.py  del_img.py
app/models/: __init__.py  request.py
app/scheduler/: __init__.py  scheduler.py  tasks.py
app/services/: __init__.py  upload_service.py
app/utils/: __init__.py  file_utils.py
docs/: api.md  deployment.md  development.md
